deployment/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloboot2
  name: helloboot2
spec:
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
  to:
    kind: Service
    name: helloboot2-service
    weight: 100
